# PLA-compressor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  example.cpp  run_benchmark.sh  run_experiments.sh  test.cpp
include/: compressed_pla.hpp  dist_vector.hpp  experiments.hpp  float_vector.hpp  general_succ_pla.hpp  huffman_vector.hpp  pfor_vector.hpp  piecewise_linear_model.hpp  plain_pla.hpp  rle_vector.hpp  slope_compressed_pla.hpp  slope_compressor.hpp  succinct_pla.hpp  utils.hpp
